Project-2/yedek/y.output
   0  $accept : program $end

   1  program : stmts

   2  stmts : stmt
   3        | stmts stmt

   4  stmt : conditional_stmt
   5       | non_if_stmt

   6  conditional_stmt : if_stmt

   7  if_stmt : IF LP logical_expression RP LCB stmts RCB
   8          | IF LP logical_expression RP LCB stmts RCB ELSE LCB stmts RCB
   9          | IF LP logical_expression RP LCB stmts RCB COMMENT ELSE LCB stmts RCB
  10          | IF LP logical_expression RP LCB stmts RCB LINE_COMMENT ELSE LCB stmts RCB

  11  non_if_stmt : loops
  12              | arithmetic_operations SEMICOLON
  13              | function_call
  14              | function_declaration
  15              | declaration
  16              | initialization
  17              | declaration_and_initialization
  18              | input_stmt
  19              | output_stmt
  20              | COMMENT
  21              | LINE_COMMENT
  22              | RETURN arithmetic_operations SEMICOLON
  23              | RETURN VOID SEMICOLON

  24  loops : while_loop
  25        | for_loop
  26        | do_while_loop

  27  while_loop : WHILE LP logical_expression RP LCB stmts RCB

  28  for_loop : FOR LP loop_initialization logical_expression SEMICOLON arithmetic_operations RP LCB stmts RCB

  29  do_while_loop : DO LCB stmts RCB WHILE LP logical_expression RP SEMICOLON

  30  loop_initialization : initialization
  31                      | declaration_and_initialization

  32  logical_expression : recursive_expression

  33  recursive_expression : single_expression
  34                       | recursive_expression logical_connector single_expression

  35  single_expression : term logical_operator arithmetic_operations
  36                    | LP logical_expression RP
  37                    | BOOL_STMT
  38                    | term
  39                    | NOT term
  40                    | NOT BOOL_STMT

  41  term : var

  42  var : IDENTIFIER
  43      | PLAYERX
  44      | PLAYERY

  45  logical_connector : AND
  46                    | OR

  47  logical_operator : IS_EQUAL_OP
  48                   | NOT_EQUAL_OP
  49                   | NOT
  50                   | GT
  51                   | LT
  52                   | GTE
  53                   | LTE

  54  arithmetic_operations : arithmetic_operations PLUS divisionAndMultiplication
  55                        | arithmetic_operations MINUS divisionAndMultiplication
  56                        | divisionAndMultiplication
  57                        | modulo
  58                        | sqrt
  59                        | power
  60                        | max
  61                        | min

  62  divisionAndMultiplication : divisionAndMultiplication DIVIDE_OP factor
  63                            | divisionAndMultiplication MULTIPLY_OP factor
  64                            | factor

  65  modulo : factor MOD_OP factor

  66  power : POW LP INT_STMT COMMA INT_STMT RP
  67        | POW LP INT_STMT COMMA DOUBLE_STMT RP
  68        | POW LP DOUBLE_STMT COMMA INT_STMT RP
  69        | POW LP DOUBLE_STMT COMMA DOUBLE_STMT RP

  70  constant_identifier : CONST term

  71  factor : term
  72         | assignment_values
  73         | LP arithmetic_operations RP

  74  max : MAX LP INT_STMT COMMA INT_STMT RP
  75      | MAX LP DOUBLE_STMT COMMA DOUBLE_STMT RP

  76  min : MIN LP INT_STMT COMMA INT_STMT RP
  77      | MIN LP DOUBLE_STMT RP COMMA DOUBLE_STMT RP

  78  sqrt : SQUARE_ROOT LP INT_STMT RP
  79       | SQUARE_ROOT LP DOUBLE_STMT RP

  80  declaration : types term SEMICOLON
  81              | types constant_identifier SEMICOLON

  82  types : INT
  83        | DOUBLE
  84        | STRING
  85        | CHAR
  86        | BOOL

  87  function_call : IDENTIFIER LP call_parameter RP SEMICOLON
  88                | MOVE LP direction RP SEMICOLON
  89                | MOVE LP direction COMMA INT_STMT RP SEMICOLON

  90  direction : WEST
  91            | SOUTH
  92            | EAST
  93            | NORTH

  94  initialization : term assignment_operator arithmetic_operations SEMICOLON
  95                 | term assignment_operator function_call

  96  declaration_and_initialization : types constant_identifier assignment_operator assignment_values SEMICOLON
  97                                 | types term assignment_operator arithmetic_operations SEMICOLON
  98                                 | types term assignment_operator function_call

  99  assignment_operator : ASSIGN_OP
 100                      | DIVIDE_ASSIGN_OP
 101                      | MULTIPLY_ASSIGN_OP
 102                      | MOD_ASSIGN_OP
 103                      | PLUS_ASSIGN_OP
 104                      | MINUS_ASSIGN_OP

 105  assignment_values : BOOL_STMT
 106                    | INT_STMT
 107                    | STRING_STMT
 108                    | DOUBLE_STMT
 109                    | CHAR_STMT

 110  input_stmt : EGG_IN LP input_context RP SEMICOLON

 111  output_stmt : EGG_OUT LP output_context RP SEMICOLON

 112  input_context : term PLUS input_context
 113                | term

 114  output_context : term
 115                 | assignment_values
 116                 | term PLUS output_context
 117                 | assignment_values PLUS output_context

 118  function_declaration : VOID IDENTIFIER LP parameter RP LCB stmts RCB
 119                       | types IDENTIFIER LP parameter RP LCB stmts RCB
 120                       | MAIN LP RP LCB stmts RCB

 121  parameter : parameter COMMA types IDENTIFIER
 122            | types IDENTIFIER
 123            |

 124  call_parameter : call_parameter COMMA IDENTIFIER
 125                 | IDENTIFIER
 126                 |

state 0
	$accept : . program $end  (0)

	LP  shift 1
	MAIN  shift 2
	PLAYERX  shift 3
	PLAYERY  shift 4
	MOVE  shift 5
	EGG_IN  shift 6
	EGG_OUT  shift 7
	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	CHAR  shift 11
	BOOL  shift 12
	IF  shift 13
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	RETURN  shift 18
	POW  shift 19
	MAX  shift 20
	MIN  shift 21
	SQUARE_ROOT  shift 22
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 28
	COMMENT  shift 29
	LINE_COMMENT  shift 30
	.  error

	program  goto 31
	stmts  goto 32
	stmt  goto 33
	conditional_stmt  goto 34
	non_if_stmt  goto 35
	if_stmt  goto 36
	loops  goto 37
	arithmetic_operations  goto 38
	function_call  goto 39
	function_declaration  goto 40
	declaration  goto 41
	initialization  goto 42
	declaration_and_initialization  goto 43
	input_stmt  goto 44
	output_stmt  goto 45
	while_loop  goto 46
	for_loop  goto 47
	do_while_loop  goto 48
	term  goto 49
	var  goto 50
	divisionAndMultiplication  goto 51
	modulo  goto 52
	sqrt  goto 53
	power  goto 54
	max  goto 55
	min  goto 56
	factor  goto 57
	assignment_values  goto 58
	types  goto 59


state 1
	factor : LP . arithmetic_operations RP  (73)

	LP  shift 1
	PLAYERX  shift 3
	PLAYERY  shift 4
	POW  shift 19
	MAX  shift 20
	MIN  shift 21
	SQUARE_ROOT  shift 22
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 60
	.  error

	arithmetic_operations  goto 61
	term  goto 62
	var  goto 50
	divisionAndMultiplication  goto 51
	modulo  goto 52
	sqrt  goto 53
	power  goto 54
	max  goto 55
	min  goto 56
	factor  goto 57
	assignment_values  goto 58


state 2
	function_declaration : MAIN . LP RP LCB stmts RCB  (120)

	LP  shift 63
	.  error


state 3
	var : PLAYERX .  (43)

	.  reduce 43


state 4
	var : PLAYERY .  (44)

	.  reduce 44


state 5
	function_call : MOVE . LP direction RP SEMICOLON  (88)
	function_call : MOVE . LP direction COMMA INT_STMT RP SEMICOLON  (89)

	LP  shift 64
	.  error


state 6
	input_stmt : EGG_IN . LP input_context RP SEMICOLON  (110)

	LP  shift 65
	.  error


state 7
	output_stmt : EGG_OUT . LP output_context RP SEMICOLON  (111)

	LP  shift 66
	.  error


state 8
	types : INT .  (82)

	.  reduce 82


state 9
	types : DOUBLE .  (83)

	.  reduce 83


state 10
	types : STRING .  (84)

	.  reduce 84


state 11
	types : CHAR .  (85)

	.  reduce 85


state 12
	types : BOOL .  (86)

	.  reduce 86


state 13
	if_stmt : IF . LP logical_expression RP LCB stmts RCB  (7)
	if_stmt : IF . LP logical_expression RP LCB stmts RCB ELSE LCB stmts RCB  (8)
	if_stmt : IF . LP logical_expression RP LCB stmts RCB COMMENT ELSE LCB stmts RCB  (9)
	if_stmt : IF . LP logical_expression RP LCB stmts RCB LINE_COMMENT ELSE LCB stmts RCB  (10)

	LP  shift 67
	.  error


state 14
	for_loop : FOR . LP loop_initialization logical_expression SEMICOLON arithmetic_operations RP LCB stmts RCB  (28)

	LP  shift 68
	.  error


state 15
	while_loop : WHILE . LP logical_expression RP LCB stmts RCB  (27)

	LP  shift 69
	.  error


state 16
	do_while_loop : DO . LCB stmts RCB WHILE LP logical_expression RP SEMICOLON  (29)

	LCB  shift 70
	.  error


state 17
	function_declaration : VOID . IDENTIFIER LP parameter RP LCB stmts RCB  (118)

	IDENTIFIER  shift 71
	.  error


state 18
	non_if_stmt : RETURN . arithmetic_operations SEMICOLON  (22)
	non_if_stmt : RETURN . VOID SEMICOLON  (23)

	LP  shift 1
	PLAYERX  shift 3
	PLAYERY  shift 4
	VOID  shift 72
	POW  shift 19
	MAX  shift 20
	MIN  shift 21
	SQUARE_ROOT  shift 22
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 60
	.  error

	arithmetic_operations  goto 73
	term  goto 62
	var  goto 50
	divisionAndMultiplication  goto 51
	modulo  goto 52
	sqrt  goto 53
	power  goto 54
	max  goto 55
	min  goto 56
	factor  goto 57
	assignment_values  goto 58


state 19
	power : POW . LP INT_STMT COMMA INT_STMT RP  (66)
	power : POW . LP INT_STMT COMMA DOUBLE_STMT RP  (67)
	power : POW . LP DOUBLE_STMT COMMA INT_STMT RP  (68)
	power : POW . LP DOUBLE_STMT COMMA DOUBLE_STMT RP  (69)

	LP  shift 74
	.  error


state 20
	max : MAX . LP INT_STMT COMMA INT_STMT RP  (74)
	max : MAX . LP DOUBLE_STMT COMMA DOUBLE_STMT RP  (75)

	LP  shift 75
	.  error


state 21
	min : MIN . LP INT_STMT COMMA INT_STMT RP  (76)
	min : MIN . LP DOUBLE_STMT RP COMMA DOUBLE_STMT RP  (77)

	LP  shift 76
	.  error


state 22
	sqrt : SQUARE_ROOT . LP INT_STMT RP  (78)
	sqrt : SQUARE_ROOT . LP DOUBLE_STMT RP  (79)

	LP  shift 77
	.  error


state 23
	assignment_values : BOOL_STMT .  (105)

	.  reduce 105


state 24
	assignment_values : STRING_STMT .  (107)

	.  reduce 107


state 25
	assignment_values : INT_STMT .  (106)

	.  reduce 106


state 26
	assignment_values : DOUBLE_STMT .  (108)

	.  reduce 108


state 27
	assignment_values : CHAR_STMT .  (109)

	.  reduce 109


state 28
	var : IDENTIFIER .  (42)
	function_call : IDENTIFIER . LP call_parameter RP SEMICOLON  (87)

	LP  shift 78
	SEMICOLON  reduce 42
	ASSIGN_OP  reduce 42
	DIVIDE_ASSIGN_OP  reduce 42
	MULTIPLY_ASSIGN_OP  reduce 42
	MOD_ASSIGN_OP  reduce 42
	PLUS_ASSIGN_OP  reduce 42
	MINUS_ASSIGN_OP  reduce 42
	PLUS  reduce 42
	MINUS  reduce 42
	MULTIPLY_OP  reduce 42
	DIVIDE_OP  reduce 42
	MOD_OP  reduce 42


state 29
	non_if_stmt : COMMENT .  (20)

	.  reduce 20


state 30
	non_if_stmt : LINE_COMMENT .  (21)

	.  reduce 21


state 31
	$accept : program . $end  (0)

	$end  accept


state 32
	program : stmts .  (1)
	stmts : stmts . stmt  (3)

	LP  shift 1
	MAIN  shift 2
	PLAYERX  shift 3
	PLAYERY  shift 4
	MOVE  shift 5
	EGG_IN  shift 6
	EGG_OUT  shift 7
	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	CHAR  shift 11
	BOOL  shift 12
	IF  shift 13
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	RETURN  shift 18
	POW  shift 19
	MAX  shift 20
	MIN  shift 21
	SQUARE_ROOT  shift 22
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 28
	COMMENT  shift 29
	LINE_COMMENT  shift 30
	$end  reduce 1

	stmt  goto 79
	conditional_stmt  goto 34
	non_if_stmt  goto 35
	if_stmt  goto 36
	loops  goto 37
	arithmetic_operations  goto 38
	function_call  goto 39
	function_declaration  goto 40
	declaration  goto 41
	initialization  goto 42
	declaration_and_initialization  goto 43
	input_stmt  goto 44
	output_stmt  goto 45
	while_loop  goto 46
	for_loop  goto 47
	do_while_loop  goto 48
	term  goto 49
	var  goto 50
	divisionAndMultiplication  goto 51
	modulo  goto 52
	sqrt  goto 53
	power  goto 54
	max  goto 55
	min  goto 56
	factor  goto 57
	assignment_values  goto 58
	types  goto 59


state 33
	stmts : stmt .  (2)

	.  reduce 2


state 34
	stmt : conditional_stmt .  (4)

	.  reduce 4


state 35
	stmt : non_if_stmt .  (5)

	.  reduce 5


state 36
	conditional_stmt : if_stmt .  (6)

	.  reduce 6


state 37
	non_if_stmt : loops .  (11)

	.  reduce 11


state 38
	non_if_stmt : arithmetic_operations . SEMICOLON  (12)
	arithmetic_operations : arithmetic_operations . PLUS divisionAndMultiplication  (54)
	arithmetic_operations : arithmetic_operations . MINUS divisionAndMultiplication  (55)

	SEMICOLON  shift 80
	PLUS  shift 81
	MINUS  shift 82
	.  error


state 39
	non_if_stmt : function_call .  (13)

	.  reduce 13


state 40
	non_if_stmt : function_declaration .  (14)

	.  reduce 14


state 41
	non_if_stmt : declaration .  (15)

	.  reduce 15


state 42
	non_if_stmt : initialization .  (16)

	.  reduce 16


state 43
	non_if_stmt : declaration_and_initialization .  (17)

	.  reduce 17


state 44
	non_if_stmt : input_stmt .  (18)

	.  reduce 18


state 45
	non_if_stmt : output_stmt .  (19)

	.  reduce 19


state 46
	loops : while_loop .  (24)

	.  reduce 24


state 47
	loops : for_loop .  (25)

	.  reduce 25


state 48
	loops : do_while_loop .  (26)

	.  reduce 26


state 49
	factor : term .  (71)
	initialization : term . assignment_operator arithmetic_operations SEMICOLON  (94)
	initialization : term . assignment_operator function_call  (95)

	ASSIGN_OP  shift 83
	DIVIDE_ASSIGN_OP  shift 84
	MULTIPLY_ASSIGN_OP  shift 85
	MOD_ASSIGN_OP  shift 86
	PLUS_ASSIGN_OP  shift 87
	MINUS_ASSIGN_OP  shift 88
	SEMICOLON  reduce 71
	PLUS  reduce 71
	MINUS  reduce 71
	MULTIPLY_OP  reduce 71
	DIVIDE_OP  reduce 71
	MOD_OP  reduce 71

	assignment_operator  goto 89


state 50
	term : var .  (41)

	.  reduce 41


state 51
	arithmetic_operations : divisionAndMultiplication .  (56)
	divisionAndMultiplication : divisionAndMultiplication . DIVIDE_OP factor  (62)
	divisionAndMultiplication : divisionAndMultiplication . MULTIPLY_OP factor  (63)

	MULTIPLY_OP  shift 90
	DIVIDE_OP  shift 91
	RP  reduce 56
	SEMICOLON  reduce 56
	PLUS  reduce 56
	MINUS  reduce 56
	AND  reduce 56
	OR  reduce 56


state 52
	arithmetic_operations : modulo .  (57)

	.  reduce 57


state 53
	arithmetic_operations : sqrt .  (58)

	.  reduce 58


state 54
	arithmetic_operations : power .  (59)

	.  reduce 59


state 55
	arithmetic_operations : max .  (60)

	.  reduce 60


state 56
	arithmetic_operations : min .  (61)

	.  reduce 61


state 57
	divisionAndMultiplication : factor .  (64)
	modulo : factor . MOD_OP factor  (65)

	MOD_OP  shift 92
	RP  reduce 64
	SEMICOLON  reduce 64
	PLUS  reduce 64
	MINUS  reduce 64
	MULTIPLY_OP  reduce 64
	DIVIDE_OP  reduce 64
	AND  reduce 64
	OR  reduce 64


state 58
	factor : assignment_values .  (72)

	.  reduce 72


state 59
	declaration : types . term SEMICOLON  (80)
	declaration : types . constant_identifier SEMICOLON  (81)
	declaration_and_initialization : types . constant_identifier assignment_operator assignment_values SEMICOLON  (96)
	declaration_and_initialization : types . term assignment_operator arithmetic_operations SEMICOLON  (97)
	declaration_and_initialization : types . term assignment_operator function_call  (98)
	function_declaration : types . IDENTIFIER LP parameter RP LCB stmts RCB  (119)

	PLAYERX  shift 3
	PLAYERY  shift 4
	CONST  shift 93
	IDENTIFIER  shift 94
	.  error

	term  goto 95
	var  goto 50
	constant_identifier  goto 96


state 60
	var : IDENTIFIER .  (42)

	.  reduce 42


state 61
	arithmetic_operations : arithmetic_operations . PLUS divisionAndMultiplication  (54)
	arithmetic_operations : arithmetic_operations . MINUS divisionAndMultiplication  (55)
	factor : LP arithmetic_operations . RP  (73)

	RP  shift 97
	PLUS  shift 81
	MINUS  shift 82
	.  error


state 62
	factor : term .  (71)

	.  reduce 71


state 63
	function_declaration : MAIN LP . RP LCB stmts RCB  (120)

	RP  shift 98
	.  error


state 64
	function_call : MOVE LP . direction RP SEMICOLON  (88)
	function_call : MOVE LP . direction COMMA INT_STMT RP SEMICOLON  (89)

	SOUTH  shift 99
	NORTH  shift 100
	EAST  shift 101
	WEST  shift 102
	.  error

	direction  goto 103


state 65
	input_stmt : EGG_IN LP . input_context RP SEMICOLON  (110)

	PLAYERX  shift 3
	PLAYERY  shift 4
	IDENTIFIER  shift 60
	.  error

	term  goto 104
	var  goto 50
	input_context  goto 105


state 66
	output_stmt : EGG_OUT LP . output_context RP SEMICOLON  (111)

	PLAYERX  shift 3
	PLAYERY  shift 4
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 60
	.  error

	term  goto 106
	var  goto 50
	assignment_values  goto 107
	output_context  goto 108


state 67
	if_stmt : IF LP . logical_expression RP LCB stmts RCB  (7)
	if_stmt : IF LP . logical_expression RP LCB stmts RCB ELSE LCB stmts RCB  (8)
	if_stmt : IF LP . logical_expression RP LCB stmts RCB COMMENT ELSE LCB stmts RCB  (9)
	if_stmt : IF LP . logical_expression RP LCB stmts RCB LINE_COMMENT ELSE LCB stmts RCB  (10)

	NOT  shift 109
	LP  shift 110
	PLAYERX  shift 3
	PLAYERY  shift 4
	BOOL_STMT  shift 111
	IDENTIFIER  shift 60
	.  error

	logical_expression  goto 112
	recursive_expression  goto 113
	single_expression  goto 114
	term  goto 115
	var  goto 50


state 68
	for_loop : FOR LP . loop_initialization logical_expression SEMICOLON arithmetic_operations RP LCB stmts RCB  (28)

	PLAYERX  shift 3
	PLAYERY  shift 4
	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	CHAR  shift 11
	BOOL  shift 12
	IDENTIFIER  shift 60
	.  error

	initialization  goto 116
	declaration_and_initialization  goto 117
	loop_initialization  goto 118
	term  goto 119
	var  goto 50
	types  goto 120


state 69
	while_loop : WHILE LP . logical_expression RP LCB stmts RCB  (27)

	NOT  shift 109
	LP  shift 110
	PLAYERX  shift 3
	PLAYERY  shift 4
	BOOL_STMT  shift 111
	IDENTIFIER  shift 60
	.  error

	logical_expression  goto 121
	recursive_expression  goto 113
	single_expression  goto 114
	term  goto 115
	var  goto 50


state 70
	do_while_loop : DO LCB . stmts RCB WHILE LP logical_expression RP SEMICOLON  (29)

	LP  shift 1
	MAIN  shift 2
	PLAYERX  shift 3
	PLAYERY  shift 4
	MOVE  shift 5
	EGG_IN  shift 6
	EGG_OUT  shift 7
	INT  shift 8
	DOUBLE  shift 9
	STRING  shift 10
	CHAR  shift 11
	BOOL  shift 12
	IF  shift 13
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	RETURN  shift 18
	POW  shift 19
	MAX  shift 20
	MIN  shift 21
	SQUARE_ROOT  shift 22
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 28
	COMMENT  shift 29
	LINE_COMMENT  shift 30
	.  error

	stmts  goto 122
	stmt  goto 33
	conditional_stmt  goto 34
	non_if_stmt  goto 35
	if_stmt  goto 36
	loops  goto 37
	arithmetic_operations  goto 38
	function_call  goto 39
	function_declaration  goto 40
	declaration  goto 41
	initialization  goto 42
	declaration_and_initialization  goto 43
	input_stmt  goto 44
	output_stmt  goto 45
	while_loop  goto 46
	for_loop  goto 47
	do_while_loop  goto 48
	term  goto 49
	var  goto 50
	divisionAndMultiplication  goto 51
	modulo  goto 52
	sqrt  goto 53
	power  goto 54
	max  goto 55
	min  goto 56
	factor  goto 57
	assignment_values  goto 58
	types  goto 59


state 71
	function_declaration : VOID IDENTIFIER . LP parameter RP LCB stmts RCB  (118)

	LP  shift 123
	.  error


state 72
	non_if_stmt : RETURN VOID . SEMICOLON  (23)

	SEMICOLON  shift 124
	.  error


state 73
	non_if_stmt : RETURN arithmetic_operations . SEMICOLON  (22)
	arithmetic_operations : arithmetic_operations . PLUS divisionAndMultiplication  (54)
	arithmetic_operations : arithmetic_operations . MINUS divisionAndMultiplication  (55)

	SEMICOLON  shift 125
	PLUS  shift 81
	MINUS  shift 82
	.  error


state 74
	power : POW LP . INT_STMT COMMA INT_STMT RP  (66)
	power : POW LP . INT_STMT COMMA DOUBLE_STMT RP  (67)
	power : POW LP . DOUBLE_STMT COMMA INT_STMT RP  (68)
	power : POW LP . DOUBLE_STMT COMMA DOUBLE_STMT RP  (69)

	INT_STMT  shift 126
	DOUBLE_STMT  shift 127
	.  error


state 75
	max : MAX LP . INT_STMT COMMA INT_STMT RP  (74)
	max : MAX LP . DOUBLE_STMT COMMA DOUBLE_STMT RP  (75)

	INT_STMT  shift 128
	DOUBLE_STMT  shift 129
	.  error


state 76
	min : MIN LP . INT_STMT COMMA INT_STMT RP  (76)
	min : MIN LP . DOUBLE_STMT RP COMMA DOUBLE_STMT RP  (77)

	INT_STMT  shift 130
	DOUBLE_STMT  shift 131
	.  error


state 77
	sqrt : SQUARE_ROOT LP . INT_STMT RP  (78)
	sqrt : SQUARE_ROOT LP . DOUBLE_STMT RP  (79)

	INT_STMT  shift 132
	DOUBLE_STMT  shift 133
	.  error


state 78
	function_call : IDENTIFIER LP . call_parameter RP SEMICOLON  (87)
	call_parameter : .  (126)

	IDENTIFIER  shift 134
	RP  reduce 126
	COMMA  reduce 126

	call_parameter  goto 135


state 79
	stmts : stmts stmt .  (3)

	.  reduce 3


state 80
	non_if_stmt : arithmetic_operations SEMICOLON .  (12)

	.  reduce 12


state 81
	arithmetic_operations : arithmetic_operations PLUS . divisionAndMultiplication  (54)

	LP  shift 1
	PLAYERX  shift 3
	PLAYERY  shift 4
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 60
	.  error

	term  goto 62
	var  goto 50
	divisionAndMultiplication  goto 136
	factor  goto 137
	assignment_values  goto 58


state 82
	arithmetic_operations : arithmetic_operations MINUS . divisionAndMultiplication  (55)

	LP  shift 1
	PLAYERX  shift 3
	PLAYERY  shift 4
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 60
	.  error

	term  goto 62
	var  goto 50
	divisionAndMultiplication  goto 138
	factor  goto 137
	assignment_values  goto 58


state 83
	assignment_operator : ASSIGN_OP .  (99)

	.  reduce 99


state 84
	assignment_operator : DIVIDE_ASSIGN_OP .  (100)

	.  reduce 100


state 85
	assignment_operator : MULTIPLY_ASSIGN_OP .  (101)

	.  reduce 101


state 86
	assignment_operator : MOD_ASSIGN_OP .  (102)

	.  reduce 102


state 87
	assignment_operator : PLUS_ASSIGN_OP .  (103)

	.  reduce 103


state 88
	assignment_operator : MINUS_ASSIGN_OP .  (104)

	.  reduce 104


state 89
	initialization : term assignment_operator . arithmetic_operations SEMICOLON  (94)
	initialization : term assignment_operator . function_call  (95)

	LP  shift 1
	PLAYERX  shift 3
	PLAYERY  shift 4
	MOVE  shift 5
	POW  shift 19
	MAX  shift 20
	MIN  shift 21
	SQUARE_ROOT  shift 22
	BOOL_STMT  shift 23
	STRING_STMT  shift 24
	INT_STMT  shift 25
	DOUBLE_STMT  shift 26
	CHAR_STMT  shift 27
	IDENTIFIER  shift 28
	.  error
